--- a/Door_Lock/MainWindow.xaml
+++ b/Door_Lock/MainWindow.xaml
@@ -5,13 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Door_Lock"
         mc:Ignorable="d"
-        Title="Door Lock"
-        Width="411"
-        Height="301">
-    <Window.Resources>
-        <XmlDataProvider x:Key="ComPorts" Source="CommsData.xml" XPath="/Comms/Ports" />
-        <XmlDataProvider x:Key="ComSpeed" Source="CommsData.xml" XPath="/Comms/Baud" />
-    </Window.Resources>
+        Title="Door Lock" Height="350" Width="525">
+    
     <Grid Margin="0,0,2,-2">
 
         <Menu Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" MinWidth="45" MinHeight="20" Height="20" Width="45">
@@ -20,69 +15,8 @@
                 <MenuItem Header="Remove User" Click="MenuItem_Click_1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </MenuItem>
         </Menu>
-
-        <ComboBox
-            x:Name="comPorts"
-            Margin="150,229,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Width="140"
-            SelectedIndex="0"
-            />
-
-        <Button
-            x:Name="clear"
-            Content="Clear"
-            HorizontalAlignment="Left"
-            Margin="10,230,0,0"
-            Width="90"
-            Click="Button_Click"
-            Height="19"
-            VerticalAlignment="Top"
-            />
-
-        <Button
-            x:Name="showLog"
-            Content="Show Log"
-            HorizontalAlignment="Left"
-            Margin="10,200,0,0"
-            Width="90"
-            Click="Button_Click"
-            Height="19"
-            VerticalAlignment="Top"
-            />
-
-        <Button
-            x:Name="showAccounts"
-            Content="Show Accounts"
-            HorizontalAlignment="Left"
-            Margin="300,200,0,0"
-            Width="90"
-            Click="Button_Click"
-            Height="19"
-            VerticalAlignment="Top"
-            />
-
-        <Button
-            x:Name="connect"
-            Content="Connect"
-            HorizontalAlignment="Left"
-            Margin="300,230,0,0"
-            Width="90"
-            Click="Button_Click"
-            Height="19"
-            VerticalAlignment="Top"
-            />
-
-        <ListBox
-            x:Name="output"
-            Margin="10,35,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Width="369"
-            Height="148"
-            SelectedIndex="0"
-            />
+        <ComboBox x:Name="comPorts" Margin="64,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="106" SelectedIndex="0"/>
+        <Button Content="Connect" HorizontalAlignment="Left" Margin="175,9,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 
     </Grid>
 
