--- a/Door_Lock/MainWindow.xaml
+++ b/Door_Lock/MainWindow.xaml
@@ -1,14 +1,15 @@
-﻿<Window x:Class="Door_Lock.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Door_Lock"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Name="main" x:Class="Door_Lock.MainWindow"
         mc:Ignorable="d"
         Title="Door Lock"
         Width="411"
-        Height="301">
-    
+        Height="301" Loaded="main_Loaded">
+
     <Window.Resources>
         <XmlDataProvider x:Key="ComPorts" Source="CommsData.xml" XPath="/Comms/Ports" />
         <XmlDataProvider x:Key="ComSpeed" Source="CommsData.xml" XPath="/Comms/Baud" />
@@ -77,8 +78,7 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Width="369"
-            Height="148"
-            SelectedIndex="0"
+            Height="148" IsSynchronizedWithCurrentItem="False" IsEnabled="False" SelectedIndex="0"
             />
 
     </Grid>
