--- a/Door_Lock/MainWindow.xaml
+++ b/Door_Lock/MainWindow.xaml
@@ -10,10 +10,7 @@
         Width="411"
         Height="301" Loaded="main_Loaded">
 
-    <Window.Resources>
-        <XmlDataProvider x:Key="ComPorts" Source="CommsData.xml" XPath="/Comms/Ports" />
-        <XmlDataProvider x:Key="ComSpeed" Source="CommsData.xml" XPath="/Comms/Baud" />
-    </Window.Resources>
+    
     <Grid Margin="0,0,2,-2">
 
         <Menu Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" MinWidth="45" MinHeight="20" Height="20" Width="45">
@@ -78,7 +75,7 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Width="369"
-            Height="148" IsSynchronizedWithCurrentItem="False" IsEnabled="False" SelectedIndex="0"
+            Height="148" IsSynchronizedWithCurrentItem="False" SelectedIndex="0" IsEnabled="False"
             />
 
     </Grid>
