--- a/Door_Lock/RemoveAccWarning.xaml
+++ b/Door_Lock/RemoveAccWarning.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Door_Lock"
         mc:Ignorable="d"
-        Title="RemoveAccWarning" Height="165" Width="300"
+        Title="Remove Account Warning" Height="165" Width="300"
         ResizeMode="NoResize">
 
 
