--- a/Door_Lock/showacc.xaml
+++ b/Door_Lock/showacc.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Door_Lock"
         mc:Ignorable="d"
-        Title="showacc" Height="500" Width="800">
+        Title="Show account" Height="500" Width="800">
     <Grid>
 
         <DataGrid x:Name="log1"
