--- a/Door_Lock/Log.xaml
+++ b/Door_Lock/Log.xaml
@@ -7,14 +7,14 @@
         mc:Ignorable="d"
         Title="Log" Height="533" Width="487">
     
-    <Grid HorizontalAlignment="Left" Width="490">
+    <Grid HorizontalAlignment="Left" Width="490" IsHitTestVisible="True">
 
         <DataGrid x:Name="log1"
 		Width="463"
 		Height="445"
 		Margin="10,10,0,0"
 		VerticalAlignment="Top"
-		HorizontalAlignment="Left"
+		HorizontalAlignment="Left" IsHitTestVisible="False"
 		/>
 
         <Button
