--- a/Door_Lock/Log.xaml
+++ b/Door_Lock/Log.xaml
@@ -14,7 +14,7 @@
 		Height="445"
 		Margin="10,10,0,0"
 		VerticalAlignment="Top"
-		HorizontalAlignment="Left" IsHitTestVisible="False"
+		HorizontalAlignment="Left" IsHitTestVisible="True"
 		/>
 
         <Button
